<package>
  <name>moveit_ikfast</name>
  <version>3.0.1</version>
  <description>Generates a IKFast kinematics plugin for MoveIt using OpenRave generated cpp files. </description>

  <author>Dave Coleman, CU Boulder</author>
  <author>Jeremy Zoss, SwRI</author>
  <author>David Butterworth, KAIST</author>
  <author>Mathias Lüdtke, Fraunhofer IPA</author>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/wiki/Kinematics/IKFast</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_ikfast/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_ikfast</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>