<package>
  <name>moveit_ros_benchmarks_gui</name>
  <version>0.5.18</version>
  <description>MoveIt GUI tools for benchmarking</description>

  <author email="mprats@willowgarage.com">Mario Prats</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <maintainer email="mprats@willowgarage.com">Mario Prats</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_ros/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_ros</url>

  <buildtool_depend>catkin</buildtool_depend> 
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_warehouse</build_depend>
  <build_depend>moveit_ros_benchmarks</build_depend>
  <build_depend>moveit_ros_visualization</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_warehouse</run_depend>
  <run_depend>moveit_ros_benchmarks</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>

</package>
