<package>
  <name>collision_detection</name>
  <version>0.1.11</version>
  <description>Collision detection</description>
  <author email="isucan@willowgarage.edu">Ioan Sucan</author>
  <author email="sachinc@willowgarage.edu">Sachin Chitta</author>
  <author email="gjones@willowgarage.edu">Gil Jones</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>
  <copyright>Willow Garage</copyright>
  <url>http://moveit.ros.org</url>

  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>planning_models</build_depend>
  <build_depend>visualization_msgs</build_depend>
</package>


